--- a/_layouts/docs.html
+++ b/_layouts/docs.html
@@ -37,7 +37,7 @@ layout: body
         </article><!-- .post -->
         <nav id="page-nav" class="page-nav">
           <div id="page-nav-inside" class="page-nav-inside sticky">
-            <h2 class="page-nav-title">Jump to Section</h2>
+            <h2 class="page-nav-title">Vai alla sezione</h2>
           </div><!-- .page-nav-inside -->
         </nav><!-- .page-nav -->
       </div><!-- .docs-content -->
