--- a/_layouts/overview.html
+++ b/_layouts/overview.html
@@ -35,7 +35,7 @@ layout: body
               {% assign excerpt_is_not_empty = section_page.excerpt | is_not_empty %}
               {% if excerpt_is_not_empty %}
                 <p class="block-item-text">{{ section_page.excerpt }}</p>
-                <p class="block-item-cta"><a href="{{ section_page.url | relative_url }}">Learn More <span class="icon-arrow-right" aria-hidden="true"></span></a></p>
+                <p class="block-item-cta"><a href="{{ section_page.url | relative_url }}">Leggi tutto <span class="icon-arrow-right" aria-hidden="true"></span></a></p>
               {% endif %}
             </div><!-- .block-item-inside -->
           </section><!-- .block-item -->
