--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,7 @@
 <header id="masthead" class="site-header outer">
+  {% if jekyll.environment == 'production' %}
+{% include analytics.html %}
+{% endif %}
   <div class="inner">
     <div class="site-header-inside">
       <div class="site-branding">
