--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -9,6 +9,9 @@
         <link href="https://fonts.googleapis.com/css?family=Lato:400,400i,700,700i%26display=swap" rel="stylesheet"> 
         <link rel="stylesheet" href="{{ 'assets/css/main.css' | relative_url }}">
         <link rel="shortcut icon" type="image/png" href="favicon-16x16.png">
+        {% if jekyll.environment == 'production' %}
+{% include analytics.html %}
+{% endif %}
         
     </head>
     <body>
